--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <p><a href=""><span id="eco">Eco</span>Hub</a></p>
         </div>
         <div id="buttons">
-            <h4><a href="#page1">Home</a></h4>
-            <h4><a href="#page2">Explore us!</a></h4>
-            <h4><a href="">Signup</a></h4>
-            <h4><a href="">Login</a></h4>
+            <a href="#page1" id="btn">Home</a>
+            <a href="#page2" id="btn">Explore us!</a>
+            <a href="" id="signup" id="btn">Signup</a>
+            <a href="" id="btn">Login</a>
         </div>
     </div>
     <div id="main">
