--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 <body>
     <div id="nav">
         <div id="logo">
-            <img id="image"
-                src="images/logo.jpg"
-                alt="error">
+            <img id="image" src="images/logo.jpg" alt="error">
             <p><a href=""><span id="eco">Eco</span>Hub</a></p>
         </div>
         <div id="buttons">
             <a href="#page1" id="btn">Home</a>
             <a href="#page2" id="btn">Explore us!</a>
-            <a href="" id="signup" id="btn">Signup</a>
+            <a href="" id="signup">Signup</a>
             <a href="" id="btn">Login</a>
         </div>
     </div>
@@ -85,7 +83,7 @@
                 </div>
             </div>
         </div>
-    </div>
+        
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
