--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="card" id="card4">
                     <div class="overlay1" id="overlay">
                         <h1>Sustainable alternatives</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, inventore.</p>
+                        <p>This is Nukul's Card</p>
                     </div>
                 </div>
                 <div class="card" id="card5">
