Signup page created

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="buttons">
             <a href="#page1" id="btn">Home</a>
             <a href="#page2" id="btn">Explore us!</a>
-            <a href="" id="signup">Signup</a>
+            <a href="signup.html" id="signup">Signup</a>
             <a href="" id="btn">Login</a>
         </div>
     </div>
