--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#page1" id="btn">Home</a>
             <a href="#page2" id="btn">Explore us!</a>
             <a href="signup.html" id="signup">Signup</a>
-            <a href="" id="btn">Login</a>
+            <a href="login.html" id="btn">Login</a>
         </div>
     </div>
     <div id="main">
