--- a/login.html
+++ b/login.html
@@ -15,6 +15,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <style>
+        body, html{
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: auto;
+            font-family: 'Gilroy-Bold', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,21 +35,11 @@
                 <p><a href="index.html"><span id="eco">Eco</span>Hub</a></p>
             </div>
             <form id="signup-form">
-                <label for="name">Name</label>
-                <input type="text" id="name" required><br><br>
-                <label for="name">Date of Birth</label>
-                <input type="date" id="DOB" required><br><br>
-                <label for="email">Email</label>
-                <input type="email" id="email" required><br><br>
-                <label for="Phone number">Phone number</label>
-                <input type="text" id="email" required><br><br>
                 <label for="Phone number">Username</label>
                 <input type="text" id="email" required><br><br>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required><br><br>
-                <label for="password">Confirm Password</label>
-                <input type="password" id="password" name="password" required><br><br>
-                <button type="submit" id="button">Create Account</button>
+                <button type="submit" id="button">Login</button>
             </form>
         </div>
     </div>
