--- a/signup.html
+++ b/signup.html
@@ -24,6 +24,7 @@
                 <img id="image" src="images/logo.jpg" alt="error">
                 <p><a href="index.html"><span id="eco">Eco</span>Hub</a></p>
             </div>
+            <h1>Signup</h1>
             <form id="signup-form">
                 <label for="name">Name</label>
                 <input type="text" id="name" required><br><br>
