--- a/tips.html
+++ b/tips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sustainable Development Tips</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="tips.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -82,6 +82,6 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="tips.js"></script>
 </body>
 </html>
