images moved into image folder

--- a/sustain.html
+++ b/sustain.html
@@ -18,7 +18,7 @@
             <section>
                 <h2>Energy Alternatives</h2>
                 <div class="card">
-                    <img src="solar-panels-8593759_640.webp" alt="Solar Panels">
+                    <img src="images/solar-panels-8593759_640.webp" alt="Solar Panels">
                     <div class="card-content">
                         <h3>Solar Power</h3>
                         <p>Harness the sun's energy with solar panels. Learn about benefits like reduced carbon footprint and energy independence.</p>
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="f430d4df27ace842e42ba518dc339a90.jpg" alt="Wind Turbine">
+                    <img src="images/f430d4df27ace842e42ba518dc339a90.jpg" alt="Wind Turbine">
                     <div class="card-content">
                         <h3>Wind Power</h3>
                         <p>Use wind turbines to generate clean electricity. Discover advantages like minimal environmental impact and energy efficiency.</p>
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="hydropower-cover-image-1080x675.jpg" alt="Hydropower">
+                    <img src="images/hydropower-cover-image-1080x675.jpg" alt="Hydropower">
                     <div class="card-content">
                         <h3>Hydropower</h3>
                         <p>Tap into the power of flowing water with hydropower systems. Explore benefits such as reliable energy production and low emissions.</p>
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="A-geothermal-power-plant-harmoniously-blending-with-natures-beauty-showcasing-sustainable-energy-generation-credit-CLOU.jpg.avif" alt="Geothermal Energy">
+                    <img src="images/A-geothermal-power-plant-harmoniously-blending-with-natures-beauty-showcasing-sustainable-energy-generation-credit-CLOU.jpg.avif" alt="Geothermal Energy">
                     <div class="card-content">
                         <h3>Geothermal Energy</h3>
                         <p>Harness heat from the earth's core with geothermal energy. Learn about benefits like constant renewable energy and minimal environmental impact.</p>
@@ -53,7 +53,7 @@
             <section>
                 <h2>Transportation Alternatives</h2>
                 <div class="card">
-                    <img src="ev.jpg" alt="Electric Car">
+                    <img src="images/ev.jpg" alt="Electric Car">
                     <div class="card-content">
                         <h3>Electric Vehicles (EVs)</h3>
                         <p>Drive electric cars to reduce emissions and reliance on fossil fuels. Enjoy benefits like lower maintenance costs and zero tailpipe emissions.</p>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="HealthyRide-640x640.jpeg" alt="Bicycle">
+                    <img src="images/HealthyRide-640x640.jpeg" alt="Bicycle">
                     <div class="card-content">
                         <h3>Bicycles and Public Transport</h3>
                         <p>Promote cycling and public transportation for eco-friendly commuting. Benefits include reduced traffic congestion and improved air quality.</p>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="1*n-6mh-5LUdlePB0H1u776Q.jpg" alt="Carpooling">
+                    <img src="images/1*n-6mh-5LUdlePB0H1u776Q.jpg" alt="Carpooling">
                     <div class="card-content">
                         <h3>Carpooling</h3>
                         <p>Share rides with others to reduce individual carbon footprints. Carpooling helps reduce traffic congestion and fuel consumption.</p>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="450x65eae06243256.jpg.webp" alt="Electric Scooter">
+                    <img src="images/450x65eae06243256.jpg.webp" alt="Electric Scooter">
                     <div class="card-content">
                         <h3>Electric Scooters</h3>
                         <p>Use electric scooters for short-distance travel. They are efficient, emission-free, and contribute to reducing urban air pollution.</p>
@@ -88,7 +88,7 @@
             <section>
                 <h2>Waste Reduction Alternatives</h2>
                 <div class="card">
-                    <img src="compost-soil-shovel-c0bdd251-5a38b6d7d23a4344a9550d3d65da9211.jpg" alt="Composting">
+                    <img src="images/compost-soil-shovel-c0bdd251-5a38b6d7d23a4344a9550d3d65da9211.jpg" alt="Composting">
                     <div class="card-content">
                         <h3>Composting</h3>
                         <p>Convert organic waste into nutrient-rich compost for gardens. Composting reduces landfill waste and enriches soil fertility naturally.</p>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="75.jpeg" alt="Reusable Products">
+                    <img src="images/75.jpeg" alt="Reusable Products">
                     <div class="card-content">
                         <h3>Reusable Products</h3>
                         <p>Opt for reusable items like bags, bottles, and utensils instead of single-use plastics. Reusable products reduce waste and conserve resources.</p>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="Zero-Waste_2bde2b51-61ac-48a6-b1ee-47b02ba2a641.png.webp" alt="Zero Waste Lifestyle">
+                    <img src="images/Zero-Waste_2bde2b51-61ac-48a6-b1ee-47b02ba2a641.png.webp" alt="Zero Waste Lifestyle">
                     <div class="card-content">
                         <h3>Zero Waste Lifestyle</h3>
                         <p>Adopt practices to minimize waste generation. Embrace a zero-waste lifestyle by reducing, reusing, recycling, and composting.</p>
