--- a/tips.html
+++ b/tips.html
@@ -20,7 +20,7 @@
                     <p>
 
                     </p>
-                    <img src="energy-saving-light-bulb-green-energy-clean-energy-generative-ai_538159-9399.jpg.avif" alt="LED Bulbs">
+                    <img src="images/energy-saving-light-bulb-green-energy-clean-energy-generative-ai_538159-9399.jpg.avif" alt="LED Bulbs">
                     <div class="card-content">
                         <h3>Switch to LED Bulbs</h3>
                         <p>Switching to LED bulbs is one of the simplest and most effective ways to save energy. LEDs use up to 75% less energy and last up to 25 times longer than incandescent bulbs. They are also available in various light colors and intensities, making them suitable for different applications.</p>
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="unplug-appliances-not-use-eco-friendly-tips-256694006.jpg.webp" alt="Unplug Devices">
+                    <img src="images/unplug-appliances-not-use-eco-friendly-tips-256694006.jpg.webp" alt="Unplug Devices">
                     <div class="card-content">
                         <h3>Unplug Devices When Not in Use</h3>
                         <p>Many electronic devices consume standby power even when turned off. Unplugging devices not in use reduces energy waste and lowers your electricity bills. Consider using power strips with switches to easily turn off multiple devices at once.</p>
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="Eco-Friendly-Appliances-.png.avif" alt="Energy Efficient Appliances">
+                    <img src="images/Eco-Friendly-Appliances-.png.avif" alt="Energy Efficient Appliances">
                     <div class="card-content">
                         <h3>Use Energy-Efficient Appliances</h3>
                         <p>Choose appliances with high energy-efficiency ratings (like ENERGY STAR). They use less electricity and water, saving money and reducing environmental impact. Look for features such as programmable settings, energy-saving modes, and efficient cooling/heating mechanisms.</p>
@@ -49,7 +49,7 @@
 
 
                 <div class="card">
-                    <img src="istockphoto-1303963124-612x612.jpg" alt="Fix Leaks">
+                    <img src="images/istockphoto-1303963124-612x612.jpg" alt="Fix Leaks">
                     <div class="card-content">
                         <h3>Fix Leaks</h3>
                         <p>Repairing leaks in faucets and toilets can save thousands of gallons of water annually. Regularly check and fix leaks to conserve water resources effectively. Consider using leak detection devices to monitor water usage and detect leaks early.</p>
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="textgram_1560963685.png" alt="Low-Flow Fixtures">
+                    <img src="images/textgram_1560963685.png" alt="Low-Flow Fixtures">
                     <div class="card-content">
                         <h3>Install Low-Flow Fixtures</h3>
                         <p>Low-flow showerheads, faucets, and toilets reduce water consumption without sacrificing performance. Save water and lower utility bills with these efficient fixtures. Look for products labeled with WaterSense certification for guaranteed water savings.</p>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="rain-water-harvesting-500x500.jpg.webp" alt="Rainwater Harvesting">
+                    <img src="images/rain-water-harvesting-500x500.jpg.webp" alt="Rainwater Harvesting">
                     <div class="card-content">
                         <h3>Rainwater Harvesting</h3>
                         <p>Collect rainwater for non-potable uses like gardening and flushing toilets. Rainwater harvesting systems are eco-friendly and reduce reliance on municipal water supplies. Use a filtration system to ensure collected water is safe for intended purposes.</p>
